--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
---extra-index-url https://download.pytorch.org/whl/cu118
+--extra-index-url https://download.pytorch.org/whl/cu124
 
-numpy==1.23.5
-opencv-python==4.7.0.72
+numpy==1.26.4
+opencv-python==4.10.0.84
 scikit-image==0.21.0
 tk==0.1.0
 pillow==9.5.0
-onnx==1.14.0
-onnxruntime-gpu==1.16.2
+onnx==1.20.1
+onnxruntime-gpu==1.20.1
 protobuf==4.23.2
-torch==2.0.1+cu118
-torchvision==0.15.2
+torch==2.5.1+cu124
+torchvision==0.20.1+cu124
 torchaudio==2.0.2
-tqdm
+tqdm==4.66.4
 ftfy
 regex
